Refactor: Padding on buttons

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -35,7 +35,7 @@
   display: flex;
   align-items: center;
   padding: 0.5rem; /* Add some padding for better visual appearance */
-  margin-right: 75rem;
+  margin-right: 52%;
   border-radius: 12px;
   color: white;
   width: 20%;
@@ -68,12 +68,13 @@
 
 .posting-buttons--container {
     display: flex;
-    margin-right: 6rem;
+    margin-right: 2%;
     align-items: center; /* Align buttons vertically in the middle */
+    width: 15%;
 }
 
 .posting-button {
-  padding: 1rem 2rem;
+  padding: 4% 5%;
   font-size: 18px;
   font-weight: bold;
   cursor: pointer;
@@ -91,7 +92,7 @@
 }
 
 .button-separator {
-  width: 1rem; /* Adjust the space between buttons */
+  width: 5%; /* Adjust the space between buttons */
 }
 
 .posting-button--grey {
