Create: Information section

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -2,7 +2,6 @@
     padding-inline: 10%;
     padding-top: 1.35%;
     text-align: center; /* Center the content */
-    overflow-y: hidden;
 }
 
 .opening-img-box {
@@ -116,6 +115,7 @@
   }
   
   .card-img {
+
     width: 100%;
     height: auto; /* Adjust the height based on your preference */
     object-fit: cover;
@@ -132,4 +132,64 @@
     margin-left: 15px;
     font-size: 14px;
     color: #666;
+  }
+
+  .see-more-button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    padding: 0;
+    font-size: 24px;
+    color: #999999;
+    margin-top: 15px;
+  }
+  
+  .see-more-button:hover {
+    color: #666666;
+  }
+
+  .info-container {
+
+    background-color: #ecd7bc;
+    padding: 30px;
+    border-radius: 20px;
+    margin-top: 50px; /* Adjust the margin as needed */
+    height: 18em; /* Adjust the overall height */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .selling-line {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 15px;
+    color: black;
+  }
+  
+  .sub-selling-line {
+    font-size: 1.3em;
+    color: #666666;
+    margin-bottom: 30px;
+  }
+  
+  .stats-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .stat-block {
+    text-align: center;
+  }
+  
+  .stat-value {
+    font-size: 2em;
+    font-weight: bold;
+    color: #333333;
+  }
+  
+  .stat-label {
+    font-size: 1em;
+    color: #666666;
+    margin-top: 5px;
   }
