--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,195 +1,237 @@
 .main-box {
-    padding-inline: 10%;
-    padding-top: 1.35%;
-    text-align: center; /* Center the content */
+  padding-inline: 10%;
+  padding-top: 1.35%;
+  text-align: center;
 }
 
 .opening-img-box {
-    position: relative; /* Set the container to relative positioning */
-    height: 55vh; /* Set the height to 65% of the viewport height */
-    overflow: hidden; /* Hide any overflow beyond the specified height */
-    border-radius: 20px;
-    margin-bottom: 1.75%;
+  position: relative;
+  height: 55vh;
+  overflow: hidden;
+  border-radius: 20px;
+  margin-bottom: 1.75%;
 }
 
 .image--main {
-    width: 100%; /* Take up 100% of the width */
-    height: 100%; /* Take up 100% of the height within the container */
-    object-fit: cover; /* Maintain the aspect ratio and cover the entire container */
-    filter: blur(4px);
-    
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: blur(4px);
 }
 
 .img-text {
-    position: absolute;
-    bottom: 14.5%;
-    left: 6%;
-    padding: 20px; /* Add padding to the text */
-    color: white;
-    font-size: 4.5em;
-    
+  position: absolute;
+  bottom: 14.5%;
+  left: 6%;
+  padding: 20px;
+  color: white;
+  font-size: 4.5em;
 }
-/* Style your LandingSearch component in a CSS file */
+
 .landing-search--box {
-    width: 750px;
-    height: 6%;
-    position: absolute;
-    bottom: 12.5%;
-    left: 7.5%;    
-    display: flex;
-    align-items: center;
-    background-color: black;
-    border-radius: 12px;
-    padding: 10px;
-    margin-right: 55%;
-    color: white;
-    
-    padding-left: 1%;
-  }
-  
-  .landing-search--icon {
-    margin-right: 0.5%;
-    padding-left: 1%;
-  }
-  
-  .landing-search--box input {
-    border: none;
-    background-color: black;
-    color: #CCCCCC;
-    outline: none;
-    width: 100%;
-    padding: 1.3%;
-    padding-top: 2%;
-    
-    
-  }
-  
-  .landing-search--box button {
-    background-color: white;
-    color: black;
-    border: none;
-    border-radius: 8px;
-    padding: 1% 3%;
-    cursor: pointer;
-    margin-right: 10px;
-    margin-left: 20px; 
-    font-size: 15px;
-    font-weight: 1000;
-  }
+  width: 750px;
+  height: 6%;
+  position: absolute;
+  bottom: 12.5%;
+  left: 7.5%;
+  display: flex;
+  align-items: center;
+  background-color: black;
+  border-radius: 12px;
+  padding: 10px;
+  margin-right: 55%;
+  color: white;
+  padding-left: 1%;
+}
 
-  .landing-search--box input::placeholder {
-    font-size: 25px;
-  }
-  
-  .landing-search--box button:hover {
-    background-color: #999999;
-  }
+.landing-search--icon {
+  margin-right: 0.5%;
+  padding-left: 1%;
+}
 
-  .heading--text--fl {
-    text-align: left;
-    margin-bottom: 0.5%;
-  }
+.landing-search--box input {
+  border: none;
+  background-color: black;
+  color: #CCCCCC;
+  outline: none;
+  width: 100%;
+  padding: 1.3%;
+  padding-top: 2%;
+}
 
-  .featured-list-bx {
-    width: 100%;
-    height: 25vh;
-    display: flex;
-    align-items: flex-start;
-    
-  }
+.landing-search--box button {
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 8px;
+  padding: 1% 3%;
+  cursor: pointer;
+  margin-right: 10px;
+  margin-left: 20px;
+  font-size: 15px;
+  font-weight: 1000;
+}
 
-  /* Add this to your existing CSS file or create a new one for the card styles */
+.landing-search--box input::placeholder {
+  font-size: 25px;
+}
 
-  .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    
-  }
-  
-  .card { 
-    border-radius: 12px;
-    margin: 0.001%;
-    padding: 12px;
-    width: 18vw; /* Adjust the width based on your preference */
-  }
-  
-  .card-img {
+.landing-search--box button:hover {
+  background-color: #999999;
+}
 
-    width: 100%;
-    height: auto; /* Adjust the height based on your preference */
-    object-fit: cover;
-    border-radius: 8px;
-  }
-  
-  .card-desc {
-    margin-top: 10px;
-    font-size: 16px;
-    font-weight: medium;
-  }
-  
-  .card-price {
-    margin-left: 15px;
-    font-size: 14px;
-    color: #666;
-  }
+.heading--text--fl {
+  text-align: left;
+  margin-bottom: 0.5%;
+}
 
-  .see-more-button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    padding: 0;
-    font-size: 24px;
-    color: #999999;
-    margin-top: 15px;
-  }
-  
-  .see-more-button:hover {
-    color: #666666;
-  }
+.featured-list-bx {
+  width: 100%;
+  height: 25vh;
+  display: flex;
+  align-items: flex-start;
+}
 
-  .info-container {
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
-    background-color: #ecd7bc;
-    padding: 30px;
-    border-radius: 20px;
-    margin-top: 50px; /* Adjust the margin as needed */
-    height: 18em; /* Adjust the overall height */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .selling-line {
-    font-size: 2em;
-    font-weight: bold;
-    margin-bottom: 15px;
-    color: black;
-  }
-  
-  .sub-selling-line {
-    font-size: 1.3em;
-    color: #666666;
-    margin-bottom: 30px;
-  }
-  
-  .stats-container {
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .stat-block {
-    text-align: center;
-  }
-  
-  .stat-value {
-    font-size: 2em;
-    font-weight: bold;
-    color: #333333;
-  }
-  
-  .stat-label {
-    font-size: 1em;
-    color: #666666;
-    margin-top: 5px;
-  }
+.card {
+  border-radius: 12px;
+  margin: 0.001%;
+  padding: 12px;
+  width: 18vw;
+}
+
+.card-img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.card-desc {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: medium;
+}
+
+.card-price {
+  margin-left: 15px;
+  font-size: 14px;
+  color: #666;
+}
+
+.see-more-button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  font-size: 24px;
+  color: #999999;
+  margin-top: 15px;
+}
+
+.see-more-button:hover {
+  color: #666666;
+}
+
+.info-container {
+  background-color: #000;
+  padding: 30px;
+  border-radius: 10px;
+  margin-top: 50px;
+  height: 18em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 4px 0px 0px rgba(199, 199, 199, 0.1); /* Added drop shadow */
+}
+
+
+.selling-line {
+  font-size: 2em;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.sub-selling-line {
+  font-size: 1.3em;
+  color: #666666;
+  margin-bottom: 30px;
+}
+
+.stats-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.stat-block {
+  text-align: center;
+}
+
+.stat-value {
+  font-size: 2em;
+  font-weight: bold;
+  color: #333333;
+}
+
+.stat-label {
+  font-size: 1em;
+  color: #666666;
+  margin-top: 5px;
+}
+
+.offer-container {
+  background-color: #000;
+  padding: 30px;
+  border-radius: 10px;
+  margin-top: 5px;
+  height: 20em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 1px 0px 0px rgba(199, 199, 199, 0.1);
+}
+
+h2 {
+  font-size: 2.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.offer-sections {
+  display: flex;
+  justify-content: space-around;
+}
+
+.offer-section {
+  text-align: center;
+  width: 30%;
+  padding: 15px;
+  border-radius: 12px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+  margin: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.offer-section:hover {
+  transform: scale(1.05);
+}
+
+h3 {
+  font-size: 1.8em;
+  font-weight: bold;
+  color: #333333;
+}
+
+p {
+  font-size: 1em;
+  color: #666666;
+  margin-top: 10px;
+}
