--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,8 @@ body {
   overflow-x: hidden;
   
 }
+
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
