--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -30,7 +30,7 @@
 
 .landing-search--box {
   width: 750px;
-  height: 6%;
+  height: 7%;
   position: absolute;
   bottom: 12.5%;
   left: 7.5%;
@@ -57,6 +57,7 @@
   width: 100%;
   padding: 1.3%;
   padding-top: 2%;
+  font-size: 25px;
 }
 
 .landing-search--box button {
@@ -114,8 +115,8 @@
 
 .card-img {
   width: 100%;
-  height: auto;
-  object-fit: cover;
+  height: 275px; /* Set a fixed height for images to ensure uniformity */
+  object-fit: cover; /* Maintain aspect ratio and cover the entire space */
   border-radius: 8px;
 }
 
@@ -186,12 +187,12 @@
 .stat-value {
   font-size: 2em;
   font-weight: bold;
-  color: #797676;
+  color: #969292;
 }
 
 .stat-label {
   font-size: 1em;
-  color: #666666;
+  color: 969292;
   margin-top: 5px;
 }
 
@@ -224,7 +225,7 @@ h2 {
   width: 30%;
   padding: 15px;
   border-radius: 12px;
-  background-color: #fff;
+  background-color: #e6e6e6;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
   margin: 10px;
   transition: transform 0.3s ease-in-out;
